[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://resources/better_tree.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/file_prompt_button.tscn" type="PackedScene" id=3]

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="base_margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VSplitContainer" type="VSplitContainer" parent="base_margin"]
margin_left = 8.0
margin_top = 8.0
margin_right = 952.0
margin_bottom = 504.0

[node name="gui" type="PanelContainer" parent="base_margin/VSplitContainer"]
margin_right = 944.0
margin_bottom = 144.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="base_margin/VSplitContainer/gui"]
margin_left = 8.0
margin_top = 6.0
margin_right = 936.0
margin_bottom = 138.0

[node name="VBoxContainer" type="VBoxContainer" parent="base_margin/VSplitContainer/gui/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 920.0
margin_bottom = 124.0
mouse_filter = 0
custom_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="base_margin/VSplitContainer/gui/MarginContainer/VBoxContainer"]
margin_right = 912.0
margin_bottom = 36.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="auto_queue" type="Button" parent="base_margin/VSplitContainer/gui/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 396.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 9
text = "auto queue"
icon_align = 1

[node name="path_dialog" parent="base_margin/VSplitContainer/gui/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 404.0
margin_right = 800.0
size_flags_horizontal = 3
text = "choose directory"
mode = 2
access = 2

[node name="settings" type="Button" parent="base_margin/VSplitContainer/gui/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 808.0
margin_right = 912.0
margin_bottom = 36.0
size_flags_horizontal = 9
size_flags_vertical = 9
text = "settings"

[node name="GridContainer" type="GridContainer" parent="base_margin/VSplitContainer/gui/MarginContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 912.0
margin_bottom = 116.0
mouse_filter = 0
size_flags_horizontal = 3
columns = 5

[node name="Label4" type="Label" parent="base_margin/VSplitContainer/gui/MarginContainer/VBoxContainer/GridContainer"]
margin_right = 176.0
margin_bottom = 28.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Username:"
align = 1
valign = 1

[node name="Label" type="Label" parent="base_margin/VSplitContainer/gui/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 184.0
margin_right = 360.0
margin_bottom = 28.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Game Title:"
align = 1
valign = 1

[node name="Label2" type="Label" parent="base_margin/VSplitContainer/gui/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 368.0
margin_right = 544.0
margin_bottom = 28.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Platform:"
align = 1
valign = 1

[node name="Label3" type="Label" parent="base_margin/VSplitContainer/gui/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 552.0
margin_right = 728.0
margin_bottom = 28.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Type:"
align = 1
valign = 1

[node name="add" type="Button" parent="base_margin/VSplitContainer/gui/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 736.0
margin_right = 912.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "Add to queue"
align = 0
icon_align = 1

[node name="username" type="OptionButton" parent="base_margin/VSplitContainer/gui/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 36.0
margin_right = 176.0
margin_bottom = 64.0
size_flags_horizontal = 3

[node name="game_title" type="OptionButton" parent="base_margin/VSplitContainer/gui/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 184.0
margin_top = 36.0
margin_right = 360.0
margin_bottom = 64.0
size_flags_horizontal = 3

[node name="platform" type="OptionButton" parent="base_margin/VSplitContainer/gui/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 368.0
margin_top = 36.0
margin_right = 544.0
margin_bottom = 64.0
size_flags_horizontal = 3

[node name="type" type="OptionButton" parent="base_margin/VSplitContainer/gui/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 552.0
margin_top = 36.0
margin_right = 728.0
margin_bottom = 64.0
size_flags_horizontal = 3

[node name="push_all" type="Button" parent="base_margin/VSplitContainer/gui/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 736.0
margin_top = 36.0
margin_right = 912.0
margin_bottom = 64.0
text = "push"

[node name="output" parent="base_margin/VSplitContainer" instance=ExtResource( 2 )]
margin_top = 160.0
margin_right = 944.0
margin_bottom = 496.0
label_text = "output"
